magic-cloud-authentication/debug-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
spec:
  containers:
  - name: debug-container
    image: nicolaka/netshoot:latest
    command:
    - sleep
    - "3600"
