magic-cloud-authentication/magic-cloud-authentication-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magic-cloud-authentication
spec:
  replicas: 1
  selector:
    matchLabels:
      app: magic-cloud-authentication
  template:
    metadata:
      labels:
        app: magic-cloud-authentication
    spec:
      containers:
        - name: magic-cloud-authentication
          image: loubix/magic-cloud-authentication
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: magic-cloud-authentication
spec:
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: magic-cloud-authentication
  type: ClusterIP
