magic-cloud-authentication/ingress-authentication.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress-authentication
  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: magic-cloud-authentication.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: magic-cloud-authentication
                port:
                  number: 8081
